--- a/mainapp/templates/mainapp/includes/inc_category_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_category_menu.html
@@ -1,7 +1,7 @@
 <div class="links clearfix">
 				<ul class="links-menu">
-                    {% for link in links_menu %}
-					<li><a href="{{ link.href }}" class="active">{{ link.name }}</a></li>
+                    {% for category in links_menu %}
+					<li><a  href="#" class="active">{{ category.name }}</a></li>
                     {% endfor %}
 
 				</ul>
