--- a/geekshop/templates/geekshop/includes/inc_main_menu.html
+++ b/geekshop/templates/geekshop/includes/inc_main_menu.html
@@ -2,13 +2,18 @@
 				<a href="{% url 'index' %}" class="logo"></a>
 				<ul class="menu">
 					<li><a href="{% url 'index' %}" class="active">домой</a></li>
-					<li><a href="products/">продукты</a></li>
+					<li><a href="{% url 'products:index' %}">продукты</a></li>
 					<li><a href="{% url 'contacts' %}">контакты</a></li>
                     {% if user.is_authenticated %}
 <li>
     <a href="{% url 'auth:edit' %}">
         {{ user.first_name|default:'Пользователь' }}
     </a>
+   <a href="{% url 'basket:view' %}" >
+       <span>
+           {% if basket %} ({{ basket|length }}) {% endif %}
+       </span>
+   </a>
 </li>
 {% endif %}
 <li>
