--- a/mainapp/templates/mainapp/includes/inc_category_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_category_menu.html
@@ -1,8 +1,20 @@
 <div class="links clearfix">
 				<ul class="links-menu">
-                    {% for category in links_menu %}
-					<li><a  href="#" class="active">{{ category.name }}</a></li>
+                <li>
+                    <a href="{% url 'products:category' 0 %}" class="{% if request.resolver_match.kwargs.pk == 0 %}
+                active{% endif %}">
+                Все
+                    </a>
+                </li>
+                    {% for link in links_menu %}
+					<li>
+                       <a href="{% url 'products:category' link.pk %}"
+                   class="{% if request.resolver_match.kwargs.pk|add:'0' == link.pk %}
+                        active{% endif %}">{{ link.name }}
+                </a>
+                    </li>
                     {% endfor %}
 
 				</ul>
 			</div>
+
