--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -48,6 +48,31 @@
 				</div>
 			</div>
 
+        <div class="products_list" style="margin-top: 50px;">
+        {% if category %}
+      <div class="title clearfix">
+        <h2>
+          Категория: "{{ category.name|title }}"
+        </h2>
+      </div>
+        {% endif %}
+      <div class="category-products" style="display: flex; justify-content: center; margin-top: 20px;" >
+
+        {% for product in products %}
+          <div class="block">
+            <a href="{% url 'basket:add' product.pk %}">
+              <img src="/media/{{ product.image }}" alt="">
+              <div class="text">
+                <img src="{% static 'geekshop/img/icon-hover.png' %}" alt="img">
+                  <h4>{{ product.name }}</h4>
+                  <p>{{ product.short_desc }} </p>
+                  <p>{{ product.description }}</p>
+              </div>
+            </a>
+          </div>
+        {% endfor %}
+
+
 			<div class="related">
 				<div class="title clearfix">
 					<h2>Похожие продукты</h2>
@@ -60,6 +85,7 @@
 							<div class="text">
 								<img src="{% static 'geekshop/img/icon-hover.png' %}" alt="img">
 								<h4>{{ product.name }}</h4>
+                                <p>{{ product.category.name }} </p>
 								<p>{{ product.short_desc }} </p>
 							</div>
 						</a>
@@ -72,3 +98,4 @@
 		</div>
 
 {% endblock %}
+
