--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -9,21 +9,21 @@
 			<div class="details-products">
 				<div class="details-slider">
 					<div class="slider-product">
-						<img src="{% static 'geekshop/img/slider1.jpg' %}">
+						<img src="/media/{{ hot_product.image }}">
 					</div>
 					<div class="slider-control">
 						<div class="block">
-							<a href="#"><img src="{% static 'geekshop/img/controll.jpg' %}" alt="">
+							<a href="#"><img src="/media/{{ hot_product.image }}" style="width: 100%" alt="">
 								<div class="text"></div>
 							</a>
 						</div>
 						<div class="block">
-							<a href="#"><img src="{% static 'geekshop/img/controll1.jpg' %}" alt="">
+							<a href="#"><img src="/media/{{ hot_product.image }}" style="width: 100%" alt="">
 								<div class="text"></div>
 							</a>
 						</div>
 						<div class="block">
-							<a href="#"><img src="{% static 'geekshop/img/controll2.jpg' %}" alt="">
+							<a href="#"><img src="/media/{{ hot_product.image }}" style="width: 100%" alt="">
 								<div class="text"></div>
 							</a>
 						</div>
@@ -31,19 +31,14 @@
 				</div>
 
 				<div class="description">
-					<h3 class="big-bold">Отличный стул</h3>
+					<h3 class="big-bold">{{ hot_product.name }}</h3>
 					<h3 class="red">горячее предложение</h3>
-					<p class="price"> 2585.9 <span>руб</span></p>
+					<p class="price">{{ hot_product.price }} <span>руб</span></p>
 					<a href="#" class="red-button">
 						заказать <i class="fa fa-chevron-right" aria-hidden="true"></i>
 					</a>
 					<div class="description-text">
-						<p>Расположитесь комфортно.</p>
-						<p>Отличное качество материалов
-						позволит вам это.</p>
-						<p>Различные цвета</p>
-						<p>высочайший уровень
-						эргономики и прочность.</p>
+						{{ hot_product.description }}
 					</div>
 				</div>
 			</div>
@@ -56,16 +51,15 @@
         </h2>
       </div>
         {% endif %}
-      <div class="category-products" style="display: flex; justify-content: center; margin-top: 20px;" >
+      <div class="category-products clearfix">
 
         {% for product in products %}
           <div class="block">
             <a href="{% url 'basket:add' product.pk %}">
               <img src="/media/{{ product.image }}" alt="">
               <div class="text">
-                <img src="{% static 'geekshop/img/icon-hover.png' %}" alt="img">
+                <img src="{% static 'geekshop/img/icon-hover.png' %}" alt="hover">
                   <h4>{{ product.name }}</h4>
-                  <p>{{ product.short_desc }} </p>
                   <p>{{ product.description }}</p>
               </div>
             </a>
@@ -74,16 +68,16 @@
 
 
 			<div class="related">
-				<div class="title clearfix">
+                 <div class="title clearfix">
 					<h2>Похожие продукты</h2>
-					<a class="explore" href="#">показать все <img src="{% static 'geekshop/img/arrow.png' %}" alt=""></a>
+					<a class="explore" href="#">показать все<img src="{% static 'geekshop/img/arrow.png' %}" alt=""></a>
 				</div>
-				<div class="related-products clearfix">
-                    {% for product in realeted_products %}
+	         <div class="related-products clearfix">
+                    {% for product in same_products %}
 					<div class="block">
-						<a href="#"><img src="/media/{{ product.image }}" alt="">
+						<a href="{% url 'basket:add' product.pk %}"><img src="/media/{{ product.image }}" alt="">
 							<div class="text">
-								<img src="{% static 'geekshop/img/icon-hover.png' %}" alt="img">
+								<img src="{% static 'geekshop/img/icon-hover.png' %}" alt="hover">
 								<h4>{{ product.name }}</h4>
                                 <p>{{ product.category.name }} </p>
 								<p>{{ product.short_desc }} </p>
@@ -95,7 +89,7 @@
 
 				</div>
 			</div>
-		</div>
+      </div>
 
 {% endblock %}
 
