--- a/adminapp/templates/adminapp/product_update.html
+++ b/adminapp/templates/adminapp/product_update.html
@@ -4,16 +4,16 @@
 {% block content %}
 <main>
     <div class="container-fluid">
-        <h1 class="mt-4">Пользователи</h1>
+        <h1 class="mt-4">Товары</h1>
         <div class="card mb-4">
             <div class="card-header">
                 <i class="fas fa-table mr-1"></i>
-                Создать
+                Редактирование/Создание
             </div>
             <div class="card-body">
                 <form class="form-horizontal" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
-                    {{ form.as_p }}
+                    {{ update_form.as_p }}
                     <input class="form-control" type="submit" value="сохранить">
                 </form>
             </div>
