--- a/adminapp/templates/adminapp/users.html
+++ b/adminapp/templates/adminapp/users.html
@@ -2,70 +2,89 @@
 {% load static %}
 
 {% block content %}
-<main>
-    <div class="container-fluid">
-        <h1 class="mt-4">Пользователи</h1>
-        <div class="card mb-4">
-            <div class="card-header">
-                <i class="fas fa-table mr-1"></i>
-                Пользователи
-            </div>
-            <div class="card-body">
-                <div class="table-responsive">
-                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                        <thead>
-                        <tr>
-                            <th>Имя пользователя</th>
-                            <th>Имя</th>
-                            <th>Фамилия</th>
-                            <th>Адрес эл. почты</th>
-                            <th>Персонал сайта</th>
-                            <th>Активный</th>
-                        </tr>
-                        </thead>
-                        <tfoot>
-                        <tr>
-                            <th>Имя пользователя</th>
-                            <th>Имя</th>
-                            <th>Фамилия</th>
-                            <th>Адрес эл. почты</th>
-                            <th>Персонал сайта</th>
-                            <th>Активный</th>
-                        </tr>
-                        </tfoot>
-                        <tbody>
-                        {% for user in objects %}
+    <main>
+        <div class="container-fluid">
+            <h1 class="mt-4">Пользователи</h1>
+            <div class="card mb-4">
+                <div class="card-header">
+                    <i class="fas fa-table mr-1"></i>
+                    Пользователи
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                            <thead>
                             <tr>
-                                <td><a href="{#% url 'admin_staff:user_update' user.id %#}" style="color: dodgerblue">{{ user.username }}</a></td>
-                                <td>{{ user.first_name }}</td>
-                                <td>{{ user.last_name }}</td>
-                                <td>{{ user.email }}</td>
-                                <td class="text-center">
-                                    {% if user.is_staff %}
-                                        <i class="fa fa-check-circle"></i>
-                                    {% else %}
-                                        <i class="fa fa-times-circle"></i>
-                                    {% endif %}
-                                </td>
-                                <td class="text-center">
-                                    {% if user.is_active %}
-                                        <i class="fa fa-check-circle"></i>
-                                    {% else %}
-                                        <i class="fa fa-times-circle"></i>
-                                    {% endif %}
-                                </td>
+                                <th>Имя пользователя</th>
+                                <th>Имя</th>
+                                <th>Фамилия</th>
+                                <th>Адрес эл. почты</th>
+                                <th>Персонал сайта</th>
+                                <th>Активный</th>
+                                <th>Редактировать</th>
+                                <th>Удалить</th>
                             </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
+                            </thead>
+                            <tfoot>
+                            <tr>
+                                <th>Имя пользователя</th>
+                                <th>Имя</th>
+                                <th>Фамилия</th>
+                                <th>Адрес эл. почты</th>
+                                <th>Персонал сайта</th>
+                                <th>Активный</th>
+                                <th>Редактировать</th>
+                                <th>Удалить</th>
+                            </tr>
+                            </tfoot>
+                            <tbody>
+                            {% for user in objects %}
+                                <tr>
+                                    <td><a href="{% url 'admin_staff:user_update' user.id %}"
+                                           style="color: dodgerblue">{{ user.username }}</a></td>
+                                    <td>{{ user.first_name }}</td>
+                                    <td>{{ user.last_name }}</td>
+                                    <td>{{ user.email }}</td>
+                                    <td class="text-center">
+                                        {% if user.is_staff %}
+                                            <i class="fa fa-check-circle"></i>
+                                        {% else %}
+                                            <i class="fa fa-times-circle"></i>
+                                        {% endif %}
+                                    </td>
+                                    <td class="text-center">
+                                        {% if user.is_active %}
+                                            <i class="fa fa-check-circle"></i>
+                                        {% else %}
+                                            <i class="fa fa-times-circle"></i>
+                                        {% endif %}
+                                    </td>
+                                    <td class="text-center">
+                                        <button>
+                                            <a href={% url 'admin_staff:user_update' user.id %}>
+                                                Изменить
+                                            </a>
+                                        </button>
+                                    </td>
+                                    <td class="text-center">
+                                        <button>
+                                            <a href={% url 'admin_staff:user_delete' user.id %}>
+                                                Удалить
+                                            </a>
+                                        </button>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <a href="{% url 'adminapp:user_create' %}">
+                        <button class="btn btn-success">Создать пользователя</button>
+                    </a>
                 </div>
             </div>
-            <div class="card-footer">
-                <a href="{% url 'adminapp:user_create' %}">
-                    <button class="btn btn-success">Создать пользователя</button>
-                </a>
-            </div>
         </div>
-    </div>
-</main>
+    </main>
 {% endblock %}
